--- a/news-app/src/App.css
+++ b/news-app/src/App.css
@@ -11,3 +11,24 @@ ul, li{
 a{
   text-decoration: none;
 }
+
+
+.card__img {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  align-items: self-start;
+  justify-content: center;
+}
+
+.card__img img {
+  width: 100%;
+}
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 100%;
+  gap: 20px;
+  padding: 30px;
+}
