--- a/news-app/src/App.css
+++ b/news-app/src/App.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+body::-webkit-scrollbar{
+  display: none;
+}
 ul, li{
   list-style: none;
   list-style-type: none;
@@ -18,17 +21,116 @@ a{
   height: 200px;
   overflow: hidden;
   display: flex;
-  align-items: self-start;
+  align-items: center;
   justify-content: center;
+  background: #f1f1f1;
+}
+p.not-found-img {
+  font-size: 24px;
+  font-weight: 600;
+  color: #547489;
 }
 
 .card__img img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.content {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+.content-articles {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
+  gap: 30px;
+  padding: 20px;
+  max-width: 1440px;
+  margin: auto;
+}
+.content-articles a.single-article {
+  width: calc(33.333% - 20px);
+  transition: all 0.3s ease-in-out;
+  background: #f8f8f8;
+}
+.content-articles a.single-article:hover {
+  scale: 1.05;
+  background: #fff;
+}
+h1.heading {
+  padding: 16px;
+  text-align: center;
+  background: #547489;
+  color: #fff;
+  position: sticky;
+  top: 109px;
+  text-transform: capitalize;
+  font-size: 36px;
+  letter-spacing: 1px;
+  z-index: 111;
+}
+.card {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+.card__content {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 16px;
+  padding-bottom: 0;
+}
+h3.card__heading {
+  height: 50px;
+  line-height: 25px;
+  letter-spacing: 0.5px;
+  overflow: auto;
+  color: #000;
+}
+h3.card__heading::-webkit-scrollbar{
+  display: none;
+}
+.source {
+  display: flex;
+  justify-content: space-between;
+  width: calc(100% + 32px);
+  margin-left: -16px;
+}
+p.source__name, p.source__date {
+  background: #a2c1d6;
+  padding: 8px;
+  color: #fff;
+  letter-spacing: 0.5px;
+  border-radius: 0 20px 20px 0;
+}
+p.source__date{
+  border-radius: 20px 0px 0px 20px;
+
+}
+p.card__detail {
+  height: 100px;
+  line-height: 20px;
+  overflow: hidden;
+  font-size: 15px;
+  letter-spacing: 0.3px;
+  color: #333;
+  text-align: justify;
+}
+.card button.button {
+  width: calc(100% + 32px);
+  margin-left: -16px;
+}
+.not-found-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
-  padding: 30px;
+}
+.not-found-page h1 {
+  font-size: 120px;
+  letter-spacing: 8px;
+}
+h2 {
+  font-size: 42px;
+  letter-spacing: 1px;
 }
