--- a/news-app/src/App.css
+++ b/news-app/src/App.css
@@ -25,12 +25,10 @@ a{
   justify-content: center;
   background: #f1f1f1;
 }
-p.not-found-img {
-  font-size: 24px;
-  font-weight: 600;
-  color: #547489;
-}
 
+.not-found-img {
+  height: 100%;
+}
 .card__img img {
   width: 100%;
   height: 100%;
