--- a/src/compoents/shared/spinner/Spinner.css
+++ b/src/compoents/shared/spinner/Spinner.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 200px;
+  background: transparent;
 }
   
   .spinner {
